# Content-Moderation

./: README.md  pyproject.toml
scripts/: benchmark.py  export_onnx.py  moderate.py  train.py
src/moderation_api/: __init__.py  config.py  labels.py  main.py  model.py  schemas.py
src/real_time_content_moderation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_api.py
