[project]
name = "real-time-content-moderation"
version = "0.1.0"
description = "FastAPI content moderation service with Transformer and ONNX Runtime inference."
requires-python = ">=3.10"
dependencies = [
  "accelerate>=0.26.0",
  "datasets>=2.18.0",
  "evaluate>=0.4.1",
  "fastapi>=0.110.0",
  "httpx>=0.27.0",
  "numpy>=1.26.0",
  "onnx>=1.15.0",
  "onnxruntime>=1.17.0",
  "optimum[onnxruntime]>=1.17.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
  "scikit-learn>=1.4.0",
  "torch>=2.2.0",
  "transformers>=4.38.0",
  "uvicorn[standard]>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
